manifests/istio-anyapl/webapl-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-anyapl
  labels:
    istio-injection: enabled
