manifests/istio-anyapl/webapl-deployment-v2.yaml
## デプロイメント 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapl-v2
  namespace: istio-anyapl  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapls
      version: v2
  template:
    metadata:
      labels:
        app: webapls
        version: v2
    spec:
      containers:
      - name: apache
        image: httpd:latest
