manifests/istio-anyapl/webapl-virtual-service-weighted.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapls-vs
  namespace: istio-anyapl
spec:
  hosts:
  - "*"
  gateways:
  - webapls-gateway
  http:
  - match:
    - uri:
        prefix: "/webapl"        
    rewrite:
      uri: "/"        
    route:
    - destination:
        host: webapls
        port:
          number: 9080
        subset: v1
      weight: 80
    - destination:
        host: webapls
        port:
          number: 9080
        subset: v2
      weight: 20
